[package]
name = "learn-rust"
version = "0.1.0"
authors = ["Andrew Walker <ardwalker@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oracle = "0.0.8"
futures = {version = "0.3.5", features = ["executor","thread-pool"]}
tokio = { version = "0.2.21", features = ["full"] }
